# rlm-scheme

./: .gitattributes  .gitignore  .gitmodules  .mcp.json  MODEL_UPDATE_SUMMARY.md  README.md  ROADMAP.md  mcp_server.py  packages_files.json  py_bridge.py  pyproject.toml  racket_server.rkt
PoC/: README.md  batch2_analyses.json  drug_pathogen_matrix.json  hypotheses.json  knowledge_base.json  knowledge_synthesis.md  normalized_findings.json  paper_analyses.json  paper_extractions.json  paper_index.json  report.md
PoC_Suppliers/: Shadow_Lead_Time_Analysis_Report.md
docs/: api-reference.md  best-practices.md  combinators.md  getting-started.md  model-registry-plan.md  planner-clarify-prompt.md  planner-finalize-prompt.md  planner-prompt.md  primitive-reference.md  strategy-planner-implementation.md  usage-guide.md
papers/: 0000_The_Tobacco_Smoke_Component_Acrolein_as_a_Major_Culprit_in_L.json  0001_The_Effects_and_Pathogenesis_of_PM25_and_Its_Components_on_C.json  0002_Endocrine_Disruptor-Induced_Bone_Damage_Due_to_Hormone_Dysre.json  0003_Effects_of_the_in-utero_dicyclohexyl_phthalate_and_di-_n_-he.json  0004_Progression_of_the_PI3KAkt_signaling_pathway_in_chronic_obst.json  0005_The_herbicide_glyphosate_inhibits_hippocampal_long-term_pote.json  0006_Effects_of_Prenatal_Exposure_to_Bisphenol_A_Substitutes_Bisp.json  0007_Resveratrol_and_Its_Derivatives_in_Inflammatory_Skin_Disorde.json  0008_A_systematic_review_for_the_development_of_Alzheimers_diseas.json  0009_The_Role_of_Endocrine_Disruptors_Bisphenols_and_Phthalates_i.json  (+806 more)
tests/: test_api_params.py  (+28 more)
(+458 files in other folders)
